CID-45 fixed z-index for tooltips to always appear on top of notification cards

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,7 @@ html, body {
 .notification {
     margin-top: 60px;
     margin-left: 52px;
+    z-index: 0;
 }
 
 .vue-notification-wrapper {
